<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9EE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/egg_timer_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Soft"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_circle"
        android:onClick="onButtonEggClicked"
        android:text="@string/egg_soft"
        android:textColor="@drawable/text_color"
        android:textStyle="bold"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Hard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_circle"
        android:onClick="onButtonEggClicked"
        android:text="@string/egg_hard"
        android:textColor="@drawable/text_color"
        android:textStyle="bold"
        app:backgroundTint="#CDDC39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Medium"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_circle"
        android:onClick="onButtonEggClicked"
        android:text="@string/egg_medium"
        android:textColor="@drawable/text_color"
        android:textStyle="bold"
        app:backgroundTint="#FF9800"
        app:layout_constraintEnd_toStartOf="@+id/btn_Hard"
        app:layout_constraintStart_toEndOf="@+id/btn_Soft"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Timer"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:enabled="false"
        android:onClick="onButtonTimerClicked"
        android:text="@string/timer_start"
        android:textColor="@drawable/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_timer"
        app:backgroundTint="#4DCC80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>